data/derived/comb/progs/unify/prog4675.ml.out
Characters 61-66:
  let f a x = List.map (a+x) in
                       ^^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'b
